Commit all files

--- a/_modules/thetis/conservative_tracer_eq_2d.html
+++ b/_modules/thetis/conservative_tracer_eq_2d.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -62,7 +61,7 @@
 <span class="sd">    \frac{\partial q}{\partial t}</span>
 <span class="sd">    + \nabla_h \cdot (\textbf{u} q)</span>
 <span class="sd">    = \nabla_h \cdot (\mu_h \nabla_h q)</span>
-<span class="sd">    :label: tracer_eq_2d</span>
+<span class="sd">    :label: cons_tracer_eq_2d</span>
 
 <span class="sd">where :math:`\nabla_h` denotes horizontal gradient, :math:`\textbf{u}` are the horizontal</span>
 <span class="sd">velocities, and</span>
@@ -251,7 +250,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
