--- a/genindex.html
+++ b/genindex.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
 <!--[if lte IE 6]>
@@ -1232,7 +1231,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.exporter.HDF5Exporter">HDF5Exporter (class in thetis.exporter)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal() (thetis.utility.ElementContinuity property)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_diffusivity">horizontal_diffusivity (thetis.options.CommonModelOptions attribute)</a>
 
@@ -2936,7 +2935,7 @@
 </li>
       <li><a href="thetis.html#thetis.limiter.VertexBasedP1DGLimiter">VertexBasedP1DGLimiter (class in thetis.limiter)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical">vertical() (thetis.utility.ElementContinuity property)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical">vertical (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.vertical_diffusivity">vertical_diffusivity (thetis.options.ModelOptions3d attribute)</a>
 </li>
@@ -3010,7 +3009,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
