--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script src="../_static/jquery.js"></script>
     <script src="../_static/underscore.js"></script>
     <script src="../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
 <!--[if lte IE 6]>
@@ -53,8 +52,7 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="abc.html">abc</a></li>
-<li><a href="logging.html">logging</a></li>
+<ul><li><a href="logging.html">logging</a></li>
 <li><a href="thetis/assembledschur.html">thetis.assembledschur</a></li>
 <li><a href="thetis/callback.html">thetis.callback</a></li>
 <li><a href="thetis/configuration.html">thetis.configuration</a></li>
@@ -86,7 +84,6 @@
 <li><a href="thetis/turbines.html">thetis.turbines</a></li>
 <li><a href="thetis/turbulence.html">thetis.turbulence</a></li>
 <li><a href="thetis/utility.html">thetis.utility</a></li>
-<li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
 </ul>
 
             <div class="clearer"></div>
@@ -98,7 +95,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
