--- a/_modules/thetis/configuration.html
+++ b/_modules/thetis/configuration.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.configuration &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>thetis.configuration &#8212; Thetis 0+untagged.1652.g469c17b.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -114,6 +113,7 @@
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">dedent</span><span class="p">(</span><span class="n">help</span><span class="p">),</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">)</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="s2">&quot;Default:</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">,</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
+        <span class="n">dvr</span> <span class="o">=</span> <span class="n">dvr</span> <span class="ow">or</span> <span class="s1">&#39;None&#39;</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">dvr</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\\</span><span class="s2">n&quot;</span><span class="p">,</span> <span class="s2">&quot;</span><span class="se">\\\\</span><span class="s2">n&quot;</span><span class="p">),</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
         <span class="k">if</span> <span class="n">extra</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">extra</span><span class="p">,</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
@@ -414,7 +414,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
