--- a/demos/demo_3d_channel.py.html
+++ b/demos/demo_3d_channel.py.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D tidal channel demo &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>3D tidal channel demo &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -239,7 +239,7 @@ horizontal velocity field (3D velocity minus its vertical average).</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
