--- a/model_options_2d.html
+++ b/model_options_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2D model options &#8212; Thetis 0+untagged.1652.g469c17b.dirty documentation</title>
+    <title>2D model options &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
