--- a/turbulence_options.html
+++ b/turbulence_options.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turbulence model options &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>Turbulence model options &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
 <!--[if lte IE 6]>
@@ -75,7 +74,7 @@
 <p>Default:</p>
 <p>1.0</p>
 </dd>
-<dt>GLSModelOptions.<strong>closure_name</strong><span class="classifier">‘k-epsilon’|’k-omega’|’Generic Lenght Scale’</span></dt><dd><p>Name of two-equation closure</p>
+<dt>GLSModelOptions.<strong>closure_name</strong><span class="classifier">‘k-epsilon’|’k-omega’|’Generic Length Scale’</span></dt><dd><p>Name of two-equation closure</p>
 <p>Default:</p>
 <p>‘k-epsilon’</p>
 </dd>
@@ -92,15 +91,23 @@
 <p>Default:</p>
 <p>True</p>
 </dd>
-<dt>GLSModelOptions.<strong>compute_kappa</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute von Karman constant from <code class="xref py py-attr docutils literal notranslate"><span class="pre">schmidt_nb_psi</span></code></p>
+<dt>GLSModelOptions.<strong>compute_galperin_clim</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute c_lim length scale limiting factor</p>
 <p>Default:</p>
 <p>True</p>
+</dd>
+<dt>GLSModelOptions.<strong>compute_kappa</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute von Karman constant from <code class="xref py py-attr docutils literal notranslate"><span class="pre">schmidt_nb_psi</span></code></p>
+<p>Default:</p>
+<p>False</p>
 </dd>
 <dt>GLSModelOptions.<strong>compute_len_min</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute min_len from k_min and psi_min</p>
 <p>Default:</p>
-<p>True</p>
+<p>False</p>
 </dd>
 <dt>GLSModelOptions.<strong>compute_psi_min</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute psi_len from k_min and eps_min</p>
+<p>Default:</p>
+<p>False</p>
+</dd>
+<dt>GLSModelOptions.<strong>compute_schmidt_nb_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute psi Schmidt number</p>
 <p>Default:</p>
 <p>True</p>
 </dd>
@@ -110,34 +117,34 @@
 </dd>
 <dt>GLSModelOptions.<strong>eps_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for epsilon</p>
 <p>Default:</p>
-<p>1e-10</p>
+<p>1e-14</p>
 </dd>
 <dt>GLSModelOptions.<strong>f_wall</strong><span class="classifier">Float</span></dt><dd><p>float: wall function parameter</p>
 <p>Default:</p>
 <p>1.0</p>
 </dd>
-<dt>GLSModelOptions.<strong>galperin_lim</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: Galperin lenght scale limitation parameter</p>
+<dt>GLSModelOptions.<strong>galperin_clim</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: Galperin length scale limitation parameter</p>
 <p>Default:</p>
-<p>0.56</p>
+<p>0.3</p>
 </dd>
 <dt>GLSModelOptions.<strong>k_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent kinetic energy</p>
 <p>Default:</p>
-<p>3.7e-08</p>
+<p>1e-06</p>
 </dd>
 <dt>GLSModelOptions.<strong>kappa</strong><span class="classifier">Float</span></dt><dd><p>float: von Karman constant</p>
 <p>If <code class="xref py py-attr docutils literal notranslate"><span class="pre">compute_kappa</span></code> is True this value will be overriden</p>
 <p>Default:</p>
 <p>0.4</p>
 </dd>
-<dt>GLSModelOptions.<strong>len_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent lenght scale</p>
+<dt>GLSModelOptions.<strong>len_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent length scale</p>
 <p>Default:</p>
-<p>1e-10</p>
+<p>1e-12</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_eps</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit on epsilon</p>
+<dt>GLSModelOptions.<strong>limit_eps</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit on epsilon</p>
 <p>Default:</p>
 <p>False</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_len</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit</p>
+<dt>GLSModelOptions.<strong>limit_len</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit</p>
 <p>Default:</p>
 <p>False</p>
 </dd>
@@ -145,9 +152,9 @@
 <p>Default:</p>
 <p>True</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit on psi</p>
+<dt>GLSModelOptions.<strong>limit_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit on psi</p>
 <p>Default:</p>
-<p>False</p>
+<p>True</p>
 </dd>
 <dt>GLSModelOptions.<strong>m</strong><span class="classifier">Float</span></dt><dd><p>float: parameter m for the definition of psi</p>
 <p>Default:</p>
@@ -163,7 +170,7 @@
 </dd>
 <dt>GLSModelOptions.<strong>psi_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for psi</p>
 <p>Default:</p>
-<p>1e-10</p>
+<p>1e-14</p>
 </dd>
 <dt>GLSModelOptions.<strong>ri_st</strong><span class="classifier">Float</span></dt><dd><p>steady state gradient Richardson number</p>
 <p>Default:</p>
@@ -199,7 +206,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
