Revert to master

--- a/_modules/thetis/conservative_tracer_eq_2d.html
+++ b/_modules/thetis/conservative_tracer_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
+    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1652.g469c17b documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -61,7 +61,7 @@
 <span class="sd">    \frac{\partial q}{\partial t}</span>
 <span class="sd">    + \nabla_h \cdot (\textbf{u} q)</span>
 <span class="sd">    = \nabla_h \cdot (\mu_h \nabla_h q)</span>
-<span class="sd">    :label: cons_tracer_eq_2d</span>
+<span class="sd">    :label: tracer_eq_2d</span>
 
 <span class="sd">where :math:`\nabla_h` denotes horizontal gradient, :math:`\textbf{u}` are the horizontal</span>
 <span class="sd">velocities, and</span>
