--- a/_modules/thetis/configuration.html
+++ b/_modules/thetis/configuration.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.configuration &#8212; Thetis 0+untagged.1652.g469c17b.dirty documentation</title>
+    <title>thetis.configuration &#8212; Thetis 0+untagged.1652.g469c17b documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -113,7 +113,6 @@
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">dedent</span><span class="p">(</span><span class="n">help</span><span class="p">),</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">)</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="s2">&quot;Default:</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">,</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
-        <span class="n">dvr</span> <span class="o">=</span> <span class="n">dvr</span> <span class="ow">or</span> <span class="s1">&#39;None&#39;</span>
         <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">dvr</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\\</span><span class="s2">n&quot;</span><span class="p">,</span> <span class="s2">&quot;</span><span class="se">\\\\</span><span class="s2">n&quot;</span><span class="p">),</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
         <span class="k">if</span> <span class="n">extra</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">indent</span><span class="p">(</span><span class="n">extra</span><span class="p">,</span> <span class="mi">4</span> <span class="o">+</span> <span class="n">nspace</span><span class="p">))</span>
