--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search &#8212; Thetis 0+untagged.1653.ged98105.dirty documentation</title>
+    <title>Search &#8212; Thetis 0+untagged.1652.g469c17b documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     
